Fix styling when editing list name on smaller screen

--- a/js/page/shoppinglist/ShoppingList.scss
+++ b/js/page/shoppinglist/ShoppingList.scss
@@ -28,6 +28,13 @@ $name-font-size: 2rem;
   padding-left: 10px;
 }
 
+@media (max-width: $small-screen-width) {
+  .shopping-list__header__name-input {
+    max-width: 50vw;
+  }
+}
+
+
 .shopping-list__header__buttons {
   display: flex;
 }
